# AI-PowerShell

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONFIDENCE_OPTIMIZATION.md  DOCUMENTATION.md  Dockerfile  LICENSE  Makefile  OLLAMA_SETUP.md  QUICK_START.md  README.md  RELEASE_NOTES.md  SANDBOX_GUIDE.md  TASK_5_FIX_SUMMARY.md  TEST_COMMANDS.md  WEB_STARTUP_GUIDE.md  docker-compose.yml  generate_test_report.py  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  run_all_tests.py  setup.py  start-web.bat  start-web.ps1  start-web.sh  start.bat  start.ps1  start.sh  stop-web.sh  test-requirements.txt  test_backend.py  test_generate_logs.py  test_logs_response2.json  (+19 more)
.github/: README.md  RELEASE_TEMPLATE.md
backup/: Dockerfile  GitHub-Release-手动创建指南.md  GitHub上传指南.md  GitHub项目设置指南.md  create-github-release.ps1  create-release.json  create-release.ps1  final-release.ps1  setup.py  simple-release.ps1  start_no_docker.py  start_simple.py  test-install-simple.ps1  test-online-install.ps1  test_comprehensive_workflows.py  test_cross_platform_compatibility.py  test_end_to_end.py  test_mcp_integration.py  test_mcp_tools_simple.py  test_security_penetration.py  v1.1.0-Release描述.md  上传到GitHub.sh  企业版修复.py  修复复杂版本.py  全面功能测试.py  创建Release指南.md  复杂版本修复完成.md  实用版使用指南.md  快速测试.py  最终项目状态.md  本地模式示例.py  版本对比分析.md  直接测试PowerShell.py  真实功能测试.py  精简前状态报告.md  项目发布准备.md  项目启动成功.md  项目完善状态.md
config/: default.yaml  development.yaml  production.yaml  templates.yaml  templates.yaml.backup  ui.yaml
docs/: CONTRIBUTING.md  README.md  api-reference.md  architecture.md  ci-cd-setup.md  class-diagram.md  cli-reference.md  confidence-and-cache-design.md  config-module-implementation.md  config-reference.md  content-verification-report.md  content-verification-summary.md  context-module-implementation.md  data-flow-diagram.md  defense-qa-checklist.md  deployment-guide.md  developer-guide.md  docker-deployment.md  document-inventory.md  link-verification-report.md  migration-map.md  refactoring-report.md  release-process.md  risk-and-error-detection-design.md  security-checker-guide.md  security-engine-implementation.md  security-rules-design-patterns-testing.md  storage-engine-implementation.md  system-architecture.md  template-cli-reference.md  template-guide.md  template-quick-reference.md  testing-guide.md  theme-customization-guide.md  troubleshooting.md  use-case-diagram.md  user-guide.md  中文使用指南.md  使用示例.md  安装指南.md  (+4 more)
docs_backup_20251017/: BACKUP_INVENTORY.md  README.md  architecture.md  cicd-and-license-guide.md  cleanup-summary.md  custom-template-guide.md  deployment-checklist.md  documentation-guide.md  main-controller-implementation.md  ollama-setup.md  progress-manager-guide.md  release-deployment-summary.md  startup-experience-guide.md  template-quick-start.md  ui-configuration-guide.md  ui-system-guide.md
examples/: analyze_project.py  progress_demo.py  startup_demo.py  ui_demo.py
k8s/: deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  service.yaml
learning/: 02_component_tour.py  03_integration_demo.py  04_hands_on_guide.md  中文学习指南.md
logs/: .gitkeep
scripts/: deploy.sh  health-check.sh  install.ps1  install.sh  release.ps1  release.sh  update_urls.ps1  update_urls.sh  verify_content_completeness.py  verify_installation.py  verify_links.py
src/: __init__.py  main.py  main_integration.py  test_error_handling.py  test_performance_benchmarks.py  test_startup_system.py  validate_setup.py
templates/: README.md
test_data/: history.json
test_reports/: test_report_20260220_122708.md  test_report_20260220_123055.md  test_report_20260220_123123.md  test_report_20260220_124644.md  test_report_20260220_124751.md  test_report_20260220_125356.md  test_report_20260220_125441.md  test_report_20260220_130942.md  test_report_20260220_131400.md  test_report_20260220_135041.md  test_report_20260220_135416.md  test_report_20260220_135523.md  test_report_20260220_135645.md  test_report_20260220_135716.md  test_report_20260220_135759.md  test_report_20260220_135840.md  test_report_20260220_135921.md
tests/: __init__.py  test_main.py  (+1 more)
(+613 files in other folders)
